--- a/roles/ifupdown2/templates/interfaces.j2
+++ b/roles/ifupdown2/templates/interfaces.j2
@@ -1,31 +1,50 @@
-{% set intvars = interfaces[ansible_hostname] %}
-# /etc/network/interfaces template for switches ({{ansible_hostname}})
-# Created by Ansible
+{% set node = interfaces[ansible_hostname] %}
+{% set bridgevars = bridges[ansible_hostname] -%}
+{% set SVIs = SVIs[ansible_hostname] -%}
 
-auto lo
-iface lo inet loopback
-  address {{ intvars.loopback }}/32
+#Configured by Ansible
 
 auto eth0
 iface eth0 inet dhcp
 
+{% for interface in node.keys() -%}
+auto {{interface}}
+{% if interface == "lo" -%}
+iface lo inet loopback
+{% else %}
+iface {{interface}}
+{% endif -%}
+{% if node[interface].ipv4 is defined %}
+  address {{node[interface].ipv4}}
+{% endif -%}
+{% if node[interface].ipv6 is defined %}
+  address {{node[interface].ipv6}}
+{% endif %}
+{% if node[interface].alias is defined %}
+  alias {{ node[interface].alias }}
+{% endif %}
+{% if node[interface].mtu is defined %}
+  mtu {{ node[interface].mtu }}
+{% endif %}
+{% endfor -%}
 
-{% for iface in intvars.neighbors %}
-auto {{ iface }}
-iface {{ iface }}
-    address {{ intvars.loopback }}/32
-
+{% for bridge in bridgevars.keys() -%}
+auto {{bridgevars[bridge].name}}
+iface {{bridgevars[bridge].name}}
+  bridge-ports {{bridgevars[bridge].members|join(' ')}}
+  bridge-stp on
+{% if bridgevars[bridge].vlanaware is defined %}
+  bridge-vlan-aware yes
+  bridge-vids {{bridgevars[bridge].vids|join(' ')}}
+  bridge-pvid 1
+{% endif %}
 {% endfor %}
 
-
-{% for network in intvars.networks | default(()) %}
-{% for port in intvars.networks[network].ports %}
-auto {{ port }}
-iface {{ port }}
-
-{% endfor %}
-auto {{ network }}
-iface {{ network }}
-    bridge-ports {{ " ".join(intvars.networks[network].ports) }}
-    address {{ intvars.networks[network].ip }}
+{% for svi in SVIs.keys() %}
+auto {{SVIs[svi].name}}
+iface {{SVIs[svi].name}}
+  address {{SVIs[svi].ip}}
+{% if SVIs[svi].virtual is defined %}
+  address-virtual {{SVIs[svi].mac}} {{SVIs[svi].virtual}}
+{% endif %}
 {% endfor %}
