--- a/roles/quagga/templates/Quagga.conf.j2
+++ b/roles/quagga/templates/Quagga.conf.j2
@@ -39,7 +39,7 @@ address-family ipv6 unicast
 {% endfor %}
 exit-address-family
 !
-ip prefix-list dc-fabric-in seq 10 permit 0.0.0.0/0
+{# ip prefix-list dc-fabric-in seq 10 permit 0.0.0.0/0
 ip prefix-list dc-fabric-in seq 20 permit 10.0.0.0/24 le 32
 {% if fabricvars.networks is defined %}
 {% for network in fabricvars.networks %}
@@ -55,3 +55,4 @@ ip prefix-list dc-fabric-out seq {{ loop.index*10 + 100 }} permit {{ network }}
 {% endfor %}
 ip prefix-list dc-fabric-out seq 500 deny any
 !
+#}
