--- a/roles/quagga/templates/Quagga.conf.j2
+++ b/roles/quagga/templates/Quagga.conf.j2
@@ -8,8 +8,8 @@ interface {{ port }}
 !
 {% endfor %}
 router bgp {{ fabricvars.asn }}
-    bgp router-id {{ intvars[lo].ipv4 }}
-    network {{ intvars[lo].ipv4 }}
+    bgp router-id {{ intvars['lo'].ipv4 }}
+    network {{ intvars['lo'].ipv4 }}
 {% if fabricvars.networks is defined %}
 {% for network in fabricvars.networks %}
     network {{ network }}
