--- a/roles/ifupdown2/templates/interfaces.j2
+++ b/roles/ifupdown2/templates/interfaces.j2
@@ -15,7 +15,7 @@ iface lo inet loopback
 iface {{interface}}
 {% endif -%}
 {% if intvars[interface].ipv4 is defined %}
-  address {{intvars[interface].ipv4}}
+  address {{intvars[interface].ipv4}}/32
 {% endif -%}
 {% if intvars[interface].ipv6 is defined %}
   address {{intvars[interface].ipv6}}
