--- a/roles/quagga/templates/Quagga.conf.j2
+++ b/roles/quagga/templates/Quagga.conf.j2
@@ -25,8 +25,8 @@ router bgp {{ fabricvars.asn }}
     neighbor fabric timers 1 3
     neighbor fabric timers connect 3
     neighbor fabric remote-as external
-    neighbor fabric prefix-list dc-fabric-in in
-    neighbor fabric prefix-list dc-fabric-out out
+{#    neighbor fabric prefix-list dc-fabric-in in
+    neighbor fabric prefix-list dc-fabric-out out #}
 {% for neighbor in fabricvars.fabricports %}
     neighbor {{ neighbor }} interface
     neighbor {{ neighbor }} peer-group fabric
