https://soundcloud.com/dsul/come-thru

--- a/roles/ifupdown2/templates/interfaces.j2
+++ b/roles/ifupdown2/templates/interfaces.j2
@@ -29,7 +29,8 @@ iface {{interface}}
 {% if intvars[interface].accessvlan is defined %}
   bridge-access {{intvars[interface].accessvlan}}
 {% endif %}
-{% endfor -%}
+
+{% endfor %}
 
 {% if ansible_hostname in bridges  %}
 {% for bridge in bridgevars.keys() -%}
